fix: safari mobile height issue
This commit fixes an issue where on mobile versions of Safari, extra spacing would appear above and below the <main> tags. This would cause the page itself to be scrollable, and some would be hidden behind the toolbar of the browser. If the toolbar was hidden by the user, the spacing disappeared.

This was a result of using vh units for the body min-height. On iOS Safari the vh unit always represents the full physical screen height, ignoring whether the browser chrome (the top URL bar and the bottom toolbar) is showing. When the toolbars are expanded the visible viewport is shorter, yet body { min-height: 100vh } still stretches the <body> to the larger value. Within <body>, content was being centred with flexbox, so the child (.page) is vertically centred inside an element that is now taller than the real viewport, so equal gaps appear above and below. As soon as the bars auto‑hide, the visible viewport grows until it once again matches 100vh, making the gaps disappear. To fix the issue, I now use dch for the body min-height.

This commit also removes some default code that was added during creation of the app with next.js.

--- a/portfolio-client/src/app/(pages)/(index)/page.module.css
+++ b/portfolio-client/src/app/(pages)/(index)/page.module.css
@@ -1,12 +1,5 @@
-@media (prefers-color-scheme: dark) {
-  .page {
-    --gray-rgb: 255, 255, 255;
-    --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
-    --gray-alpha-100: rgba(var(--gray-rgb), 0.06);
-
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
-  }
+.page {
+  height: 100%;
 }
 
 .content {
@@ -23,7 +16,7 @@
   grid-row-start: 2;
   padding: 20px;
   z-index: 10;
-  height: 95vh;
+  height: 95dvh;
   overflow-y: scroll;
 
   /* Remove scrollbar from Firefox & Edge browsers*/
@@ -42,27 +35,10 @@
   }
 }
 
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
-    background: var(--button-primary-hover);
-    border-color: transparent;
-  }
-
-  a.secondary:hover {
-    background: var(--button-secondary-hover);
-    border-color: transparent;
-  }
-
-  .footer a:hover {
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
-}
-
 @media (max-width: 600px) {
   .page {
-    padding: 32px;
-    padding-bottom: 80px;
+    padding: 10px;
+    /*padding-bottom: 32px;*/
   }
 
   .main {
@@ -87,11 +63,5 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
   }
 }
