--- a/portfolio-client/src/app/styles/globals.css
+++ b/portfolio-client/src/app/styles/globals.css
@@ -10,13 +10,12 @@ body {
     font-size: 18px; /*default font size */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    margin: 0;
+    padding: 0;
+    min-height: 100dvh;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0;
-    /*overflow: hidden;*/
-    min-height: 100vh
+    margin: 0;
 }
 
 * {
